syntax = "proto3";
package org.example.grpc;

message HelloRequest {
  string name = 1;
}

message MultipleHelloRequest {
  string name = 1;
  int32 responseCount = 2;
}

message HelloResponse {
  string greeting = 1;
}

service GreetingService {
  rpc greeting(HelloRequest) returns (HelloResponse);
  rpc greetings(MultipleHelloRequest) returns (stream HelloResponse);
}